doc: translate text to english

--- a/iris_dataset.ipynb
+++ b/iris_dataset.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Iris Dataset\n",
-    "### Importação dos dados"
+    "### Import Iris Dataset"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "id": "4214038f-4166-4c49-b7be-c72a0e93b8a2",
    "metadata": {},
    "source": [
-    "### Objervações"
+    "### Observations"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "id": "d8f7c41c-42f0-4c24-8627-89a6b8dc80d0",
    "metadata": {},
    "source": [
-    "### shape das observações"
+    "### observations shape"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "id": "3d8e16f2-9839-481a-8c85-9310a44c90e1",
    "metadata": {},
    "source": [
-    "### shape do target"
+    "### target shape"
    ]
   },
   {
