feat: train the computer and predict

--- a/iris_dataset.ipynb
+++ b/iris_dataset.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7b684054-ba38-48b0-9e55-6f4b19725d93",
    "metadata": {},
    "outputs": [],
@@ -29,11 +29,171 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3006cc82-6911-4d81-b972-9415bba466f2",
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ab9a9dff-e284-4c03-a7d1-245a854a2ec5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]\n",
+      " [5.4 3.9 1.7 0.4]\n",
+      " [4.6 3.4 1.4 0.3]\n",
+      " [5.  3.4 1.5 0.2]\n",
+      " [4.4 2.9 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.1]\n",
+      " [5.4 3.7 1.5 0.2]\n",
+      " [4.8 3.4 1.6 0.2]\n",
+      " [4.8 3.  1.4 0.1]\n",
+      " [4.3 3.  1.1 0.1]\n",
+      " [5.8 4.  1.2 0.2]\n",
+      " [5.7 4.4 1.5 0.4]\n",
+      " [5.4 3.9 1.3 0.4]\n",
+      " [5.1 3.5 1.4 0.3]\n",
+      " [5.7 3.8 1.7 0.3]\n",
+      " [5.1 3.8 1.5 0.3]\n",
+      " [5.4 3.4 1.7 0.2]\n",
+      " [5.1 3.7 1.5 0.4]\n",
+      " [4.6 3.6 1.  0.2]\n",
+      " [5.1 3.3 1.7 0.5]\n",
+      " [4.8 3.4 1.9 0.2]\n",
+      " [5.  3.  1.6 0.2]\n",
+      " [5.  3.4 1.6 0.4]\n",
+      " [5.2 3.5 1.5 0.2]\n",
+      " [5.2 3.4 1.4 0.2]\n",
+      " [4.7 3.2 1.6 0.2]\n",
+      " [4.8 3.1 1.6 0.2]\n",
+      " [5.4 3.4 1.5 0.4]\n",
+      " [5.2 4.1 1.5 0.1]\n",
+      " [5.5 4.2 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.2]\n",
+      " [5.  3.2 1.2 0.2]\n",
+      " [5.5 3.5 1.3 0.2]\n",
+      " [4.9 3.6 1.4 0.1]\n",
+      " [4.4 3.  1.3 0.2]\n",
+      " [5.1 3.4 1.5 0.2]\n",
+      " [5.  3.5 1.3 0.3]\n",
+      " [4.5 2.3 1.3 0.3]\n",
+      " [4.4 3.2 1.3 0.2]\n",
+      " [5.  3.5 1.6 0.6]\n",
+      " [5.1 3.8 1.9 0.4]\n",
+      " [4.8 3.  1.4 0.3]\n",
+      " [5.1 3.8 1.6 0.2]\n",
+      " [4.6 3.2 1.4 0.2]\n",
+      " [5.3 3.7 1.5 0.2]\n",
+      " [5.  3.3 1.4 0.2]\n",
+      " [7.  3.2 4.7 1.4]\n",
+      " [6.4 3.2 4.5 1.5]\n",
+      " [6.9 3.1 4.9 1.5]\n",
+      " [5.5 2.3 4.  1.3]\n",
+      " [6.5 2.8 4.6 1.5]\n",
+      " [5.7 2.8 4.5 1.3]\n",
+      " [6.3 3.3 4.7 1.6]\n",
+      " [4.9 2.4 3.3 1. ]\n",
+      " [6.6 2.9 4.6 1.3]\n",
+      " [5.2 2.7 3.9 1.4]\n",
+      " [5.  2.  3.5 1. ]\n",
+      " [5.9 3.  4.2 1.5]\n",
+      " [6.  2.2 4.  1. ]\n",
+      " [6.1 2.9 4.7 1.4]\n",
+      " [5.6 2.9 3.6 1.3]\n",
+      " [6.7 3.1 4.4 1.4]\n",
+      " [5.6 3.  4.5 1.5]\n",
+      " [5.8 2.7 4.1 1. ]\n",
+      " [6.2 2.2 4.5 1.5]\n",
+      " [5.6 2.5 3.9 1.1]\n",
+      " [5.9 3.2 4.8 1.8]\n",
+      " [6.1 2.8 4.  1.3]\n",
+      " [6.3 2.5 4.9 1.5]\n",
+      " [6.1 2.8 4.7 1.2]\n",
+      " [6.4 2.9 4.3 1.3]\n",
+      " [6.6 3.  4.4 1.4]\n",
+      " [6.8 2.8 4.8 1.4]\n",
+      " [6.7 3.  5.  1.7]\n",
+      " [6.  2.9 4.5 1.5]\n",
+      " [5.7 2.6 3.5 1. ]\n",
+      " [5.5 2.4 3.8 1.1]\n",
+      " [5.5 2.4 3.7 1. ]\n",
+      " [5.8 2.7 3.9 1.2]\n",
+      " [6.  2.7 5.1 1.6]\n",
+      " [5.4 3.  4.5 1.5]\n",
+      " [6.  3.4 4.5 1.6]\n",
+      " [6.7 3.1 4.7 1.5]\n",
+      " [6.3 2.3 4.4 1.3]\n",
+      " [5.6 3.  4.1 1.3]\n",
+      " [5.5 2.5 4.  1.3]\n",
+      " [5.5 2.6 4.4 1.2]\n",
+      " [6.1 3.  4.6 1.4]\n",
+      " [5.8 2.6 4.  1.2]\n",
+      " [5.  2.3 3.3 1. ]\n",
+      " [5.6 2.7 4.2 1.3]\n",
+      " [5.7 3.  4.2 1.2]\n",
+      " [5.7 2.9 4.2 1.3]\n",
+      " [6.2 2.9 4.3 1.3]\n",
+      " [5.1 2.5 3.  1.1]\n",
+      " [5.7 2.8 4.1 1.3]\n",
+      " [6.3 3.3 6.  2.5]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [7.1 3.  5.9 2.1]\n",
+      " [6.3 2.9 5.6 1.8]\n",
+      " [6.5 3.  5.8 2.2]\n",
+      " [7.6 3.  6.6 2.1]\n",
+      " [4.9 2.5 4.5 1.7]\n",
+      " [7.3 2.9 6.3 1.8]\n",
+      " [6.7 2.5 5.8 1.8]\n",
+      " [7.2 3.6 6.1 2.5]\n",
+      " [6.5 3.2 5.1 2. ]\n",
+      " [6.4 2.7 5.3 1.9]\n",
+      " [6.8 3.  5.5 2.1]\n",
+      " [5.7 2.5 5.  2. ]\n",
+      " [5.8 2.8 5.1 2.4]\n",
+      " [6.4 3.2 5.3 2.3]\n",
+      " [6.5 3.  5.5 1.8]\n",
+      " [7.7 3.8 6.7 2.2]\n",
+      " [7.7 2.6 6.9 2.3]\n",
+      " [6.  2.2 5.  1.5]\n",
+      " [6.9 3.2 5.7 2.3]\n",
+      " [5.6 2.8 4.9 2. ]\n",
+      " [7.7 2.8 6.7 2. ]\n",
+      " [6.3 2.7 4.9 1.8]\n",
+      " [6.7 3.3 5.7 2.1]\n",
+      " [7.2 3.2 6.  1.8]\n",
+      " [6.2 2.8 4.8 1.8]\n",
+      " [6.1 3.  4.9 1.8]\n",
+      " [6.4 2.8 5.6 2.1]\n",
+      " [7.2 3.  5.8 1.6]\n",
+      " [7.4 2.8 6.1 1.9]\n",
+      " [7.9 3.8 6.4 2. ]\n",
+      " [6.4 2.8 5.6 2.2]\n",
+      " [6.3 2.8 5.1 1.5]\n",
+      " [6.1 2.6 5.6 1.4]\n",
+      " [7.7 3.  6.1 2.3]\n",
+      " [6.3 3.4 5.6 2.4]\n",
+      " [6.4 3.1 5.5 1.8]\n",
+      " [6.  3.  4.8 1.8]\n",
+      " [6.9 3.1 5.4 2.1]\n",
+      " [6.7 3.1 5.6 2.4]\n",
+      " [6.9 3.1 5.1 2.3]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [6.8 3.2 5.9 2.3]\n",
+      " [6.7 3.3 5.7 2.5]\n",
+      " [6.7 3.  5.2 2.3]\n",
+      " [6.3 2.5 5.  1.9]\n",
+      " [6.5 3.  5.2 2. ]\n",
+      " [6.2 3.4 5.4 2.3]\n",
+      " [5.9 3.  5.1 1.8]]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(iris.data)"
+    "x = iris.data\n",
+    "print(x)"
    ]
   },
   {
@@ -46,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "397a57c5-018f-45e5-b27e-cf17852aac27",
    "metadata": {},
    "outputs": [
@@ -63,7 +223,8 @@
     }
    ],
    "source": [
-    "print(iris.target)"
+    "y = iris.target\n",
+    "print(y)"
    ]
   },
   {
@@ -76,18 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "26da7a4a-ea17-48b4-b9af-5dad47e97aa9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['setosa' 'versicolor' 'virginica']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(iris.target_names)"
    ]
@@ -102,18 +255,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0cb6ffca-151f-44c6-94f9-b4757df9d6a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(150, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(iris.data.shape)"
    ]
@@ -128,29 +273,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "411babd3-1d3c-413c-8fbe-52f5f03db9c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(iris.target.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6afbd067-f3e8-41d9-a460-a5e95ba42dc8",
+   "metadata": {},
+   "source": [
+    "### KNN import"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c0d099d-73ac-4e5b-a296-3fa49145e73e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af63c4b3-52eb-4a5d-8e05-53baf9acc563",
+   "metadata": {},
+   "source": [
+    "### Train the machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfec13ee-faef-46b5-98eb-9e4d32ff0f3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn.fit(x,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65d4b43a-14d3-41b6-ba02-f2924c419042",
+   "metadata": {},
+   "source": [
+    "### Do predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5625d5dd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(150,)\n"
+      "virginica\n"
      ]
     }
    ],
    "source": [
-    "print(iris.target.shape)"
+    "species = knn.predict([\n",
+    "     [5.9, 3,  5.1, 1.8]\n",
+    "])[0]\n",
+    "print(iris.target_names[species])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc6c89fc-0077-4a15-ba85-492772f34e27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
