feat: add analyze the score
also added more documentation to notebook

--- a/iris_dataset.ipynb
+++ b/iris_dataset.ipynb
@@ -6,12 +6,21 @@
    "metadata": {},
    "source": [
     "# Iris Dataset\n",
+    "It is a collection of 150 samples of Iris flowers\n",
+    "\n",
+    "We have 50 samples for each species, so we have 3 species\n",
+    "\n",
+    "In this dataset we have the width and length of the petal and sepal of each item\n",
+    "\n",
+    "## Goal\n",
+    "Train the computer to recognize the species of an Iris flower based on the measurement\n",
+    "\n",
     "### Import Iris Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "7b684054-ba38-48b0-9e55-6f4b19725d93",
    "metadata": {},
    "outputs": [],
@@ -25,12 +34,12 @@
    "id": "4214038f-4166-4c49-b7be-c72a0e93b8a2",
    "metadata": {},
    "source": [
-    "### Observations"
+    "### Observations (Sample data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 94,
    "id": "ab9a9dff-e284-4c03-a7d1-245a854a2ec5",
    "metadata": {},
    "outputs": [
@@ -193,7 +202,24 @@
    ],
    "source": [
     "x = iris.data\n",
-    "print(x)"
+    "print(x)\n",
+    "# [\n",
+    "#  [5.1 3.5 1.4 0.2]\n",
+    "#  [4.9 3.  1.4 0.2]\n",
+    "#  ...\n",
+    "# ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "560270f4",
+   "metadata": {},
+   "source": [
+    "An numpy.**ndarray** where each of each item is a sample with **width/heigh** of **petal** and **sepal**\n",
+    "\n",
+    "A **ndarray** is like a list, but much more efficient and with additional methods\n",
+    "\n",
+    "widely used in machine learning due to its efficiency in working with giant data"
    ]
   },
   {
@@ -201,12 +227,15 @@
    "id": "efc3824c-7472-4fbf-8dbb-fa05d6d04646",
    "metadata": {},
    "source": [
-    "### Target (results)"
+    "### Target (results)\n",
+    "The species of each flower\n",
+    "\n",
+    "The target should be **numeric**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
    "id": "397a57c5-018f-45e5-b27e-cf17852aac27",
    "metadata": {},
    "outputs": [
@@ -224,7 +253,8 @@
    ],
    "source": [
     "y = iris.target\n",
-    "print(y)"
+    "print(y)\n",
+    "# [ 0 0 1 1 2 2 0 2 0...]"
    ]
   },
   {
@@ -232,17 +262,28 @@
    "id": "b3f4d3c2-4a7f-41dc-86c8-b1017e073903",
    "metadata": {},
    "source": [
-    "### Target Name"
+    "### Target Name\n",
+    "\n",
+    "We can get the species name with **.target_names**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "26da7a4a-ea17-48b4-b9af-5dad47e97aa9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['setosa' 'versicolor' 'virginica']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(iris.target_names)"
+    "print(iris.target_names)\n",
+    "# ['setosa' 'versicolor' 'virginica']"
    ]
   },
   {
@@ -250,17 +291,29 @@
    "id": "d8f7c41c-42f0-4c24-8627-89a6b8dc80d0",
    "metadata": {},
    "source": [
-    "### observations shape"
+    "### observations shape\n",
+    "We need to validate if the length of the observation(data) match length of the target(ids)\n",
+    "\n",
+    "We can get the length with the shape command"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "0cb6ffca-151f-44c6-94f9-b4757df9d6a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 4)\n"
+     ]
+    }
+   ],
    "source": [
-    "print(iris.data.shape)"
+    "print(iris.data.shape)\n",
+    "# (150, 4)"
    ]
   },
   {
@@ -268,17 +321,37 @@
    "id": "3d8e16f2-9839-481a-8c85-9310a44c90e1",
    "metadata": {},
    "source": [
-    "### target shape"
+    "### target shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "411babd3-1d3c-413c-8fbe-52f5f03db9c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150,)\n"
+     ]
+    }
+   ],
    "source": [
-    "print(iris.target.shape)"
+    "print(iris.target.shape)\n",
+    "# (150,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "479f59ae",
+   "metadata": {},
+   "source": [
+    "## Statistical model\n",
+    "We are going o use an statistical model to analyze the flowers and find out what specie is it using the measurement as input\n",
+    "\n",
+    "The model we are going to use is the **KNN**(K Nearest neighbors)"
    ]
   },
   {
@@ -291,12 +364,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "6c0d099d-73ac-4e5b-a296-3fa49145e73e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "# choose the initial value for k \n",
     "knn = KNeighborsClassifier(n_neighbors=1)"
    ]
   },
@@ -305,15 +379,32 @@
    "id": "af63c4b3-52eb-4a5d-8e05-53baf9acc563",
    "metadata": {},
    "source": [
-    "### Train the machine"
+    "### Train the machine\n",
+    "We are going to train our app using KNN where it will analyze the target and the observation so it can predict the species by the measurement \n",
+    "\n",
+    "We can train our app using the method **fit**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "bfec13ee-faef-46b5-98eb-9e4d32ff0f3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-11 {color: black;}#sk-container-id-11 pre{padding: 0;}#sk-container-id-11 div.sk-toggleable {background-color: white;}#sk-container-id-11 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-11 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-11 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-11 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-11 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-11 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-11 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-11 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-11 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-11 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-11 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-11 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-11 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-11 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-11 div.sk-item {position: relative;z-index: 1;}#sk-container-id-11 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-11 div.sk-item::before, #sk-container-id-11 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-11 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-11 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-11 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-11 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-11 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-11 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-11 div.sk-label-container {text-align: center;}#sk-container-id-11 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-11 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-11\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(n_neighbors=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-11\" type=\"checkbox\" checked><label for=\"sk-estimator-id-11\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier(n_neighbors=1)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=1)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "knn.fit(x,y)"
    ]
@@ -323,12 +414,19 @@
    "id": "65d4b43a-14d3-41b6-ba02-f2924c419042",
    "metadata": {},
    "source": [
-    "### Do predictions"
+    "### Do predictions\n",
+    "We can do the prediction using the **predict** method\n",
+    "\n",
+    "The input is an array of sample observation(measurement)\n",
+    "\n",
+    "The response is an array with the target(id) of the species\n",
+    "\n",
+    "We can then use the **target_names** method to get the **species name**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 101,
    "id": "5625d5dd",
    "metadata": {},
    "outputs": [
@@ -336,15 +434,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[2]\n",
       "virginica\n"
      ]
     }
    ],
    "source": [
-    "species = knn.predict([\n",
-    "     [5.9, 3,  5.1, 1.8]\n",
-    "])[0]\n",
-    "print(iris.target_names[species])"
+    "species = knn.predict([[5.9, 3, 5.1, 1.8]])\n",
+    "print(species)\n",
+    "## [2]\n",
+    "print(iris.target_names[species[0]])\n",
+    "## virginica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88725580",
+   "metadata": {},
+   "source": [
+    "## Separate data into two groups\n",
+    "We are separating the data to ensure it is predicting correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "28121d98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccc02142",
+   "metadata": {},
+   "source": [
+    "the method **train_test_split** will divide data for **training** and **testing** \n",
+    "\n",
+    "it will be divided **randomly**\n",
+    "\n",
+    "the **test_size = 25** means **75%** to **train** and **25%** to **test**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60f73d81",
+   "metadata": {},
+   "source": [
+    "## Model performance assessment\n",
+    "We are going to know our accuracy\n",
+    "\n",
+    "first we train our model with the train observation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "53262887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn.fit(x_train, y_train)\n",
+    "predictions = knn.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e8a4bc",
+   "metadata": {},
+   "source": [
+    "Now we will get the accuracy using the metric from sklearn\n",
+    "\n",
+    "The first argument is the original data, and the second the prediction\n",
+    "\n",
+    "It will then check the percentage of correct predictions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "01e102a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9736842105263158\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "\n",
+    "correct_predictions = metrics.accuracy_score(y_test, predictions)\n",
+    "print(correct_predictions)\n",
+    "# 0.9736842105263158"
    ]
   }
  ],
