doc: update description

--- a/iris_dataset.ipynb
+++ b/iris_dataset.ipynb
@@ -58,7 +58,7 @@
    "id": "560270f4",
    "metadata": {},
    "source": [
-    "An numpy.**ndarray** where each of each item is a sample with **width/heigh** of **petal** and **sepal**\n",
+    "The type of the data is an numpy.**ndarray** where each of each item is a sample with **width/heigh** of **petal** and **sepal**\n",
     "\n",
     "A **ndarray** is like a list, but much more efficient and with additional methods\n",
     "\n",
