feat: using the regression model on iris dataset

--- a/iris_dataset.ipynb
+++ b/iris_dataset.ipynb
@@ -310,6 +310,54 @@
     "print(correct_predictions)\n",
     "# 0.9736842105263158"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f9dff80",
+   "metadata": {},
+   "source": [
+    "## Applying the Logistic Regression Model\n",
+    "\n",
+    "It is a classification model despite its, name\n",
+    "\n",
+    "Examples:\n",
+    "- if email is a span or not\n",
+    "- if gender is male or female\n",
+    "- if specie is A, B or C\n",
+    "\n",
+    "It was supposed to be used with a binary data, but could be used with non binary as well\n",
+    "\n",
+    "<img src=\"./doc/images/regression_one_vs_all.png\" width=\"1000px\" />\n",
+    "\n",
+    "In this example we choose one specie vs all other, we repeat it with all species and get the best result (0.65)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78828808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logreg = LogisticRegression(max_iter=1000)\n",
+    "\n",
+    "logreg.fit(x_train, y_train)\n",
+    "for i in logreg.predict_proba([[6.2, 3.4, 5.4, 2.3]])[0]:\n",
+    "    print(round(i,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db3a300c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_logreg = logreg.predict(x_test)\n",
+    "correct_predictions_logreg = metrics.accuracy_score(y_test, prediction_logreg)\n",
+    "print(correct_predictions_logreg)"
+   ]
   }
  ],
  "metadata": {
